eliminate empty Strings